<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewLabelTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_size_label" />

    <EditText
        android:id="@+id/editTextTextSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text_size"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textViewLabelTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_color_label" />

    <EditText
        android:id="@+id/editTextTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text_color" />

    <Button
        android:id="@+id/buttonSaveSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_settings" />

</LinearLayout>
